[package]
name = "rust-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread"] }

[[bin]]
name = "rust-sandbox"
path = "main.rs"
